testing/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: rtmp-tv
  name: rtmp-deployment
  namespace: rtmp
spec:
  selector:
    matchLabels:
      app: rtmp-tv
  template:
    metadata:
      labels:
        app: rtmp-tv
    spec:
      containers:
      - env:
        - name: TARGET
          valueFrom:
            configMapKeyRef:
              key: TARGET
              name: rtmp-tv-config
        - name: KEY
          valueFrom:
            configMapKeyRef:
              key: KEY
              name: rtmp-tv-config
        image: peuserik/hdw-rtmp:dev-dynamic
        imagePullPolicy: Always
        name: hdw-rtmp
        ports:
        - containerPort: 1935
          name: rtmp
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
