testing/rtmp-http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmp-tv-service
  namespace: rtmp
  labels:
    app: rtmp-tv
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
  - name: rtmp-port
    port: 1935
    protocol: TCP
  - name: https-port
    port: 443
    protocol: TCP
  - name: healthz
    port: 8080
    protocol: TCP
  selector:
    app: rtmp-tv
  type: NodePort
