testing/rtmp-tcp.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmp-input
  namespace: rtmp
  labels:
    app: rtmp-tv
spec:
  type: LoadBalancer
  loadBalancerIP: 35.233.96.239
  ports:
  - name: rtmp-input
    port: 1935
    targetPort: 1935
    protocol: TCP
  selector:
    app: rtmp-tv
