testing/app.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-static-ip2
  labels:
    app: rtmp-tv
  name: rtmp-tv-ing-app
  namespace: rtmp
spec:
  rules:
  - host: rtmp.peuserik.de
    http:
      paths:
      - backend:
          serviceName: rtmp-tv-service
          servicePort: 80
        path: /*
