testing/dash.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rtmp-tv-ing-dash
  namespace: rtmp
  labels:
    app: rtmp-tv
spec:
  backend:
    serviceName: rtmp-tv-service
    servicePort: 80
